pc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-chatbot-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: private-chatbot
  template:
    metadata:
      labels:
        app: private-chatbot
    spec:
      containers:
      - name: private-chatbot
        image: ghcr.io/open-webui/open-webui:main
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "500m"
            memory: "500Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
        tty: true
        volumeMounts:
        - name: private-chatbot-volume
          mountPath: /app/backend/data
      volumes:
      - name: private-chatbot-volume
        persistentVolumeClaim:
          claimName: private-chatbot-pvc
