pc-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: private-chatbot-service
  namespace: private-chatbot
spec:
  type: LoadBalancer  # Use LoadBalancer if you're on a cloud that supports it
  selector:
    app: private-chatbot
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      # If using NodePort, you can optionally specify the nodePort:
      # nodePort: 30000
