webui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-chatbot-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: web-chatbot.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-chatbot
                port:
                  number: 8080
